--- a/src/index.css
+++ b/src/index.css
@@ -20,14 +20,13 @@
   background-size: cover;
   background-position: center;
   height: 250px;
-  
 }
 
 .content-div:hover {
   background-image: linear-gradient(
-      to right,
-      rgba(112, 157, 255, 0.8),
-      hsla(242, 74%, 61%, 0.8)   
+      to top,
+      #f2f5ff,
+      #e1e6f8
   )!important;
   
 }
